json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,40 @@
 {
  "items": [
   {
+    "id": "QX_SlgEiSLy3XYfhqrxDqw",
+    "url": "http://jobmote.com/jobs/21988-workday-payroll-consultant-remote-permanent",
+    "title": "Workday Payroll Consultant - Remote - Permanent",
+    "tags": [
+      "DBG:surround``OR(work,oper,anywher,remot) 3W OR(feel,creativ)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Skillsearch Limited",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 10, 2018 9:20:41 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<div><div><div></div></div><div><div><div><p><strong>Workday Payroll Consultant - Remote - Permanent</strong></p><p>I am looking for Workday Payroll Consultants to come and work with one of the Workday service partners across the USA. They actively support a healthy work/life balance and are looking for individuals to come and join their growing company.</p><p>With experience in Workday Payroll implementations, you will be a Subject Matter Expert that is able to adapt to whatever Payroll project you undertake.</p><p><strong>Some of your responsibilities will include:</strong></p><ul><li>Using your functional and design experience to lead projects to help find the perfect solution for your client</li><li>Working with clients, stakeholders and alongside the project team, you will be able to present detailed technical information appropriate to your audience</li><li>Working to deadlines, you will be able to drive the delivery of all Workday Payroll functions as required</li><li>Lead a project team and be able to coach and mentor team members, utilising your experience to get the best out of everyone around you</li></ul><p><strong>Your experience:</strong></p><ul><li>You will have been involved in Workday Payroll implementations, both end to end and at different project phases</li><li>Very strong Functional knowledge of Workday Payroll and how to get the best out of the system</li><li>Strong experience in configuration and testing</li><li>Excellent problem solving and troubleshooting skills, allowing you to adapt and overcome any issues that may be presented</li></ul><p><strong>In return you will get:</strong></p><ul><li>A highly competitive salary with a great benefits package</li><li>To work for a company that promote a healthy work life balance</li><li>A role where the company wants to see you succeed and will help with both personal and professional development</li></ul><p><strong>Due to the nature of the role you will required to travel when necessary to either client sites or to the company office (25%). However, the role will predominately be working remotely.</strong></p><p>If you feel you have the right skills and experience for the role then please get in contact: (see below) Phone:</p><h2>Workday, #WorkdayPayroll, #Payroll, #Remote, #SaaS, #USA, #Implementation, #Project, #Functional, #Configuration, #HRsystems, #Payrollsystems</h2><p><strong>Workday Payroll Consultant - Remote - Permanent</strong></p><p></p></div></div><div></div></div></div>"
+  },
+  {
     "id": "cPtjN_IcRI60qfgYMv4cQw",
     "url": "https://remote.co/job/medical-coder-12/",
     "title": "Medical Coder",
@@ -107,6 +141,43 @@
     "published": "Aug 10, 2018 2:21:11 AM",
     "validThrough": "Jan 1, 1970 1:00:00 AM",
     "content": "<div><div><div></div></div><div><div><div><p>Skill : Oracle Retail RPM Technical Consultant (50% Remote) Location : Virginia Beach, VA Duration : Long-term Job description: Proficiency in Oracle Retail Price Management (RPM Version 16) Application architecture with exposure to solution design and coding. Proficient in SQL, PL/SQL and creation and modification of database tables, packages, procedures, functions, Triggers, Index, Sequence and view. Deep knowledge in RPM V16 batch job architecture, performance tuning skills and scheduling dependencies. Excellent communication skills 50% remote Our Company: Vigilant is Oracle's leading Cloud ERP partner in U.S. and Canada. Vigilant is an Oracle Platinum Partner, uniquely equipped and certified to sell and support the majority of Oracle solutions: Hardware, Database, Applications, Cloud, etc. Please provide me a latest copy of your updated resume. Thank you Regards, Pramod Kumar E: Ph: , Ext 202 - provided by Dice </p><p>Retail Price Management, RPM, PL/SQL </p></div></div><div></div></div></div>"
+  },
+  {
+    "id": "obby6iGSRoCuagpKW2J4LA",
+    "url": "https://remote.com/jobs/browse/preview/nodejs-1",
+    "title": "NodeJS",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG_TECH1:k/t/w:node.js/nodejs/26",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=26, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/nodejs",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "nodejs"
+    ],
+    "hiringOrganization": {
+      "name": "Kambda",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 9, 2018 8:33:44 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "JOB TYPE: Part Time<br /><br />LOCATION:<br />Remote<br />Anywhere in<br />South America<br />North America<br /><br />EXPERIENCE: intermediate<br /><br />COMPANY: Kambda; 10-50 employees; 75-100% remote;<br /><br />Looking a NodeJs dev with at least 3 years of experience. <br /><br />fluent in english. <br />Located in the American Continent"
   },
   {
     "id": "MncRPyaGQTOcse-Pl8o3Fw",
@@ -4201,80 +4272,6 @@
     "published": "Jun 12, 2018 3:16:40 PM",
     "validThrough": "Jan 1, 1970 1:00:00 AM",
     "content": "<h2>Translator from English to Indian, Vietnamese or Japanese</h2>   Location:    Remote    Remote  <div>  Role and job type: ️ Content Contractor </div> <div>  <h3>Job Description</h3>  <p>We need a professional translator who can translate crypto-related articles fast.</p>  <h4>Salary range</h4>  <p>Depending on the amount of work. Negotiable</p> </div>"
-  },
-  {
-    "id": "diBbVcaxQ1qgqg6ScAEZEw",
-    "url": "http://workinstartups.com/job-board/job/69866/start-up-experienced-virtual-assistant-at-costartup-go/",
-    "title": "Start Up Experienced Virtual Assistant",
-    "tags": [
-      "DBG:surround``OR(abl,will,challeng,flexibl,experi,get,prefer) 2W 2N(work,remot)",
-      "DBG_TECH1:k/t/w:computer-vision/bigdata-ml/8",
-      "DBG_TECH1:k/t/w:go/go/3",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=3, nodejs=0, bigdata-ml=8, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
-      "REMOTE1/100",
-      "TECH1/bigdata-ml",
-      "TITLE1/unknown",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "bigdata-ml"
-    ],
-    "hiringOrganization": {
-      "name": "UNSET",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "isEquity": false
-    },
-    "employmentType": "UNSET",
-    "published": "Jun 11, 2018 10:36:22 AM",
-    "validThrough": "Jan 1, 1970 1:00:00 AM",
-    "content": "REQUIRED: PREVIOUS EXPERIENCE AS EITHER AN EXECUTIVE ASSISTANT OR A PERSONAL ASSISTANT<br /><br />CoStartup & Go is a ‘one stop shop’ flexible support for startups.<br /><br />All the services that a startup needs under one roof in affordable project or monthly hours from business set up, creative design, digital marketing, social media through to PA/ VA /support & Project management.<br /><br />All powered by a group of handpicked freelancers.<br /><br />With exciting new collaborations and our successful New York launch we are now looking to recruit several top notch Project Managers / Virtual Assistants at the top of their game.<br /><br />Note: This is a project management role, not an admin role (no emails or diary etc) And we are looking for operations ‘doers’ not consultants.<br /><br />This work would suit someone with a strong background working in startups looking to work more flexibly while being part of a new and exciting startup growing globally.<br /><br />You will need to meet the following criteria:<br /><br />- Minimum of 2 years office manager or operations experience<br /><br />- Personal Assistant or Executive experience a must minimum 3 years<br /><br />- Experience working remotely<br /><br />- Strong Project Management skills (able to run with projects from start to finish)<br /><br />- Smart, switched on and extremely tech savvy<br /><br />- Be able to manage multiple clients and demands easily<br /><br />- MUST BE LONDON BASED<br /><br />- Open to meeting with clients if required (London)<br /><br />If interested please apply along with your CV!"
-  },
-  {
-    "id": "AQo9JM_sTIS4dNZH1d7RzQ",
-    "url": "http://workinstartups.com/job-board/job/69866/start-up-experienced-virtual-assistant-august-at-costartup-go/",
-    "title": "Start Up Experienced Virtual Assistant AUGUST",
-    "tags": [
-      "DBG:surround``OR(abl,will,challeng,flexibl,experi,get,prefer) 2W 2N(work,remot)",
-      "DBG_TECH1:k/t/w:computer-vision/bigdata-ml/8",
-      "DBG_TECH1:k/t/w:go/go/3",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=3, nodejs=0, bigdata-ml=8, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
-      "REMOTE1/100",
-      "TECH1/bigdata-ml",
-      "TITLE1/unknown",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "bigdata-ml"
-    ],
-    "hiringOrganization": {
-      "name": "UNSET",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "UNSET",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "isEquity": false
-    },
-    "employmentType": "UNSET",
-    "published": "Jun 11, 2018 10:36:22 AM",
-    "validThrough": "Jan 1, 1970 1:00:00 AM",
-    "content": "REQUIRED: PREVIOUS EXPERIENCE AS EITHER AN EXECUTIVE ASSISTANT OR A PERSONAL ASSISTANT<br /><br />CoStartup & Go is a ‘one stop shop’ flexible support for startups.<br /><br />All the services that a startup needs under one roof in affordable project or monthly hours from business set up, creative design, digital marketing, social media through to PA/ VA /support & Project management.<br /><br />All powered by a group of handpicked freelancers.<br /><br />With exciting new collaborations and our successful New York launch we are now looking to recruit several top notch Project Managers / Virtual Assistants at the top of their game.<br /><br />Note: This is a project management role, not an admin role (no emails or diary etc) And we are looking for operations ‘doers’ not consultants.<br /><br />This work would suit someone with a strong background working in startups looking to work more flexibly while being part of a new and exciting startup growing globally.<br /><br />You will need to meet the following criteria:<br /><br />- Minimum of 2 years office manager or operations experience<br /><br />- Personal Assistant or Executive experience a must minimum 3 years<br /><br />- Experience working remotely<br /><br />- Strong Project Management skills (able to run with projects from start to finish)<br /><br />- Smart, switched on and extremely tech savvy<br /><br />- Be able to manage multiple clients and demands easily<br /><br />- MUST BE LONDON BASED<br /><br />- Open to meeting with clients if required (London)<br /><br />If interested please apply along with your CV!"
   }
 ]
 }
