json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,53 @@
 {
  "items": [
   {
+    "id": "85AftcKiR0uXefR5m9HWSg",
+    "url": "https://remoteok.io/jobs/68465",
+    "title": "IOS Engineer",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:app-store/mobile/8",
+      "DBG_TECH1:k/t/w:cocoa-touch/apple/8",
+      "DBG_TECH1:k/t/w:cocoa/apple/16",
+      "DBG_TECH1:k/t/w:ios/apple/10",
+      "DBG_TECH1:k/t/w:ios/mobile/10",
+      "DBG_TECH1:k/t/w:macos/apple/4",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:opengl/c/10",
+      "DBG_TECH1:k/t/w:swift/apple/10",
+      "DBG_TECH1:k/t/w:swift/mobile/16",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=12, mobile=42, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=51, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Martiancraft",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 12, 2018 11:21:00 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<td><span><h2>iOS Engineer</h2></span><br><span><h3>Martiancraft</h3></span></td><div><div><br>We are looking for a creative iOS software engineer to join our US-based remote company. We've been crafting custom Mac and iOS software for our clients for over ten years and are adding to our iOS engineering team.&nbsp;This position is open to U.S.-based candidates only.&nbsp;<br><br>Responsibilities<br>- Design and build advanced applications in Swift and Objective-C<br>- Collaborate with cross-functional teams to define, design, and ship new features<br>- Work with outside data sources and APIs<br>- Unit-test code for robustness, including edge cases, usability, and general reliability<br>- Work on bug fixing and improving application performance<br>- Continuously discover, evaluate, and implement new technologies to maximize development efficiency<br>- Cooperate with clients on best practices and approaches<br><br>Required Skills<br>- 5+ years of software development experience on Apple platforms<br>- Shipping a title to the iTunes App Store.<br>- Proficient with Swift, Cocoa, Cocoa Touch and Obj-C<br>- Ability to deliver solid work on tight deadlines while working remotely<br>- Must be a motivated team player able to work with minimal supervision<br>- Design-minded<br>- Strong attention to detail<br>- Highly motivated self starter<br>- macOS software development experience a plus<br>- OpenGL/OpenGL ES experience a plus<br><br>Preferred Skills &amp; Experience<br>- Past remote work experience<br>- Previous small team experience<br>- Software consulting or freelancing experience<br><br>Details<br>- Located near Houston, TX, is a plus but not required. Must be able to travel 3-4 times a year to client site in Houston.<br>- This is a full time employment position<br>- Paid time off<br>- Sick leave<br>- Full medical, dental, and vision<br>- Matching 401(k)<p>See more jobs at <span>Martiancraft</span></p></div></div>"
+  },
+  {
     "id": "DRg70rxISBma_T1v-LygSg",
     "url": "https://stackoverflow.com/jobs/199636/ios-engineer-martiancraft?a=14X0qbbfKT9m",
     "title": "iOS Engineer at MartianCraft  ",
