--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,42 @@
 {
  "items": [
   {
+    "id": "Q9hXRGZsRAy7qS7IU0RjKA",
+    "url": "https://jobspresso.co/job/english-online-language-tutor/",
+    "title": "English Online Language Tutor",
+    "tags": [
+      "DBG:surround``OR(eastern, east, est, edt, newyork) 3W OR(time,timezon)",
+      "DBG:surround``work 2W from 2W home 4W OR(staff,cowork,offic,posit)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/America/East"
+    ],
+    "tagsNames1": [
+      "US East time zone",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "Rosetta Stone",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 12, 2018 11:15:37 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2> English Online Language Tutor</h2><div>Various<br></div><div>Eastern Time Zone<br></div><div>Company: Rosetta Stone<br></div><div>Part Time<br></div><h3>Overview</h3><p></p><strong>We Are Rosetta Stone!</strong><p>We all share a passion for building a world in which everyone can speak, read, and write with confidence. Our innovative, technology-based language, literacy, and brain fitness solutions are used by thousands of schools, businesses, and government organizations—and millions of learners around the world.</p><p>We are Rosetta Stone – and we are dedicated to helping people change their lives through the power of language and literacy education. Join our passionate, energetic, and international team and add your talents to Who We Are!</p><p></p><strong>We Are Language Coaching &nbsp;</strong><p></p><em>I love working for Rosetta Stone because it gives me the opportunity to talk with people from all over the world.&nbsp; I’ve probably learned more from the learners than they’ve learned from me!&nbsp; &nbsp;It’s always a source of joy for me when they recognize that they&nbsp;really can&nbsp;learn a new language and that they are making real progress! –&nbsp;Jean, 7 Years English Online Language Tutoring</em><p>We make the magic happen. We are bright and engaging tutors who facilitate small, safe online sessions that help learners produce speech and socialize in their new language. We motivate thousands of learners, serve as a bridge to help them communicate thoughts and concepts, and connect cultures in a way that ultimately changes lives. Can you bring that kind of magic?</p><p></p><strong>You Are an American English Online Language Tutor</strong><p>Rosetta Stone Studio is searching for native speakers of English to facilitate a series of energetic online language classes for beginner to advanced students. Applicants&nbsp;&nbsp;be comfortable with technology and have access to broadband Internet from a personal computer.</p><em>MUST</em><p></p><strong>This is a work from home, part-time position.</strong><p>We are looking for candidates who can work 10-12 hours</p><strong>&nbsp;weekly between the hours of 6am-11am ET&nbsp;weekdays and weekends.&nbsp;</strong><p>&nbsp;&nbsp;</p><strong>Initiative:&nbsp;</strong><em>You enjoy the work you do and are continuously striving to provide an excellent learning experience. You understand how to connect with learners and motivate them to achieve their language learning goals.</em><em> </em><br><strong>Accountable:</strong><em>You are self-motivated to manage a remote opportunity and take pride in your commitment to our learners. </em><br><strong>Collaborative:&nbsp;</strong><em>You collaborate with your supervisor and fellow colleagues to become confident in your role and share success stories! </em><br><strong>Adaptable:&nbsp;</strong><em>You thrive in an adaptable work environment! You understand time management and priorities, and can adjust schedules to accommodate the mission of this role.&nbsp;You are seeking a flexible, work from home schedule but are committed to the hours desired for this position</em><p></p><strong>All About You</strong><ul></ul><li>You are a native English speaker</li><li>Completion of a Bachelor’s degree required</li><li>Teaching and/or tutoring experience preferred</li><li>Demonstrated ability to adapt content for client needs</li><li>Proven proficiency with technology with demonstrated online platform experience in WebEx, Adobe, or any other web conferencing solutions preferred</li><p></p><em>At Rosetta Stone we speak, learn, and interact differently, we embrace and thrive on these differences! We deeply benefit from the diversity that each individual has to offer. We are dedicated to fostering a culture that celebrates unique backgrounds, ideas and experiences. Rosetta Stone is an Equal Opportunity Employer. All qualified applicants will receive consideration for employment without regard to race, color, religion, sex, sexual orientation, national origin, age, disability, pregnancy, veteran status or any other status protected by federal, state or local laws.&nbsp;</em><div> <div><div><p>To apply for this job please visit the following URL: <a href='https://jobs.jobvite.com/rosettastone/job/oQ7c8fw1' rel='nofollow'>https://jobs.jobvite.com/rosettastone/job/oQ7c8fw1 →</a></p></div></div></div>"
+  },
+  {
     "id": "EXe3tSEoSI6GQxoxbyS42g",
     "url": "https://remote.co/job/adult-psychiatrist/",
     "title": "Adult Psychiatrist",
